--- a/.github/workflows/deploy-ods.yml
+++ b/.github/workflows/deploy-ods.yml
@@ -58,3 +58,4 @@ jobs:
             --resource-group "${{ github.event.inputs.resource_group }}" \
             --command-id RunPowerShellScript \
             --scripts "cd C:\\Temp\\EdFi.Suite3.RestApi.Databases.Standard; Start-Process powershell.exe -ArgumentList '-ExecutionPolicy Bypass -Command \"Start-Transcript -Path C:\\Temp\\deployment_log.txt; Import-Module .\\Deployment.psm1; Initialize-DeploymentEnvironment; Stop-Transcript\"' -Verb RunAs"
+            --scripts "cd C:\\Temp\\EdFi.Suite3.RestApi.Databases.Standard; powershell.exe -ExecutionPolicy Bypass -Command \"\$Password = ConvertTo-SecureString -String 'Passwrod1234!' -AsPlainText -Force; \$Credential = New-Object System.Management.Automation.PSCredential ('exampleadmin', \$Password); Start-Process powershell.exe -ArgumentList '-ExecutionPolicy Bypass -Command `"Import-Module .\\Deployment.psm1; Initialize-DeploymentEnvironment`"" -Credential \$Credential\""
