--- a/.github/workflows/install-ods.yml
+++ b/.github/workflows/install-ods.yml
@@ -10,19 +10,20 @@ on:
         options:
           - develop
         default: staging
-      vm_name:
-        description: "The name of the VM to run the command on"
-        required: true
       resource_group:
         description: "The resource group of the VM"
+        required: true
+      web_api_vm_name:
+        description: "The name of the WEB API VM"
+        required: true
+      sql_vm_name:
+        description: "The name of the SQL VM"
         required: true
       version:
         description: "The version of EdFi.Suite3.Installer.WebApi to install"
         required: true
         default: "7.2.4"
-      second_vm_name:
-        description: "The name of the second VM for database installation"
-        required: true
+      
 
 env:
   ARM_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
@@ -44,7 +45,7 @@ jobs:
         run: |
           az vm run-command invoke \
             --command-id RunPowerShellScript \
-            --name "${{ github.event.inputs.vm_name }}" \
+            --name "${{ github.event.inputs.web_api_vm_name }}" \
             --resource-group "${{ github.event.inputs.resource_group }}" \
             --scripts '
             # Download and extract WebApi Installer
@@ -66,7 +67,7 @@ jobs:
         run: |
           az vm run-command invoke \
             --command-id RunPowerShellScript \
-            --name "${{ github.event.inputs.second_vm_name }}" \
+            --name "${{ github.event.inputs.sql_vm_name }}" \
             --resource-group "${{ github.event.inputs.resource_group }}" \
             --scripts '
             # Download and extract RestApi Databases
@@ -74,3 +75,21 @@ jobs:
             Rename-Item -Path "C:/Temp/EdFi.Suite3.RestApi.Databases.Standard.5.1.0.nupkg" -NewName "EdFi.Suite3.RestApi.Databases.Standard.zip"
             Expand-Archive -Path "C:/Temp/EdFi.Suite3.RestApi.Databases.Standard.zip" -DestinationPath "C:/Temp/EdFi.Suite3.RestApi.Databases.Standard" -Force
             Remove-Item -Path "C:/Temp/EdFi.Suite3.RestApi.Databases.Standard/configuration.postgreSQL.json" -Force'
+      
+      - name: Create Deployment Script
+        run: |
+          SCRIPT_CONTENT='
+          Set-Location "C:\Temp\EdFi.Suite3.RestApi.Databases.Standard"
+          
+          Write-Host "Creating ps1 file..."
+          "Import-Module .\Deployment.psm1" | Out-File -FilePath "dbs_installation.ps1"
+          "Initialize-DeploymentEnvironment" | Out-File -FilePath "dbs_installation.ps1" -Append
+          
+          Write-Host "File created successfully"
+          Get-Content -Path "dbs_installation.ps1"'
+          
+          az vm run-command invoke \
+            --command-id RunPowerShellScript \
+            --name "${{ github.event.inputs.sql_vm_name }}" \
+            --resource-group "${{ github.event.inputs.resource_group }}" \
+            --scripts "$SCRIPT_CONTENT" 
