--- a/.github/workflows/installation_scripts.yml
+++ b/.github/workflows/installation_scripts.yml
@@ -50,6 +50,10 @@ jobs:
         with:
           creds: '{"clientId":"${{ env.ARM_CLIENT_ID }}","clientSecret":"${{ env.ARM_CLIENT_SECRET }}","subscriptionId":"${{ env.ARM_SUBSCRIPTION_ID }}","tenantId":"${{ env.ARM_TENANT_ID }}"}'
 
+      - name: Add Azure DevOps Auth Token
+        run: |
+          echo "##vso[task.setvariable variable=SYSTEM_ACCESSTOKEN]$(az account get-access-token --query accessToken -o tsv)"
+
       - name: Download Components on Web Server VM
         run: |
           az vm run-command invoke \
@@ -62,8 +66,12 @@ jobs:
             Rename-Item -Path "C:/Temp/EdFi.Suite3.Installer.WebApi.${{ github.event.inputs.version }}.nupkg" -NewName "EdFi.Suite3.Installer.WebApi.zip"
             Expand-Archive -Path "C:/Temp/EdFi.Suite3.Installer.WebApi.zip" -DestinationPath "C:/Temp/EdFi.Suite3.Installer.WebApi" -Force
 
-            # Download and extract SwaggerUI
-            Invoke-WebRequest -Uri "https://pkgs.dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_apis/packaging/feeds/EdFi@Release/nuget/packages/EdFi.Suite3.Installer.SwaggerUI/versions/7.2.6/content" -OutFile "C:/Temp/EdFi.Suite3.Installer.SwaggerUI.nupkg"
+            # Get latest SwaggerUI version and download it
+            $swaggerLatestVersion = (Invoke-RestMethod -Uri "https://pkgs.dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_apis/packaging/feeds/EdFi@Release/nuget/packages/EdFi.Suite3.Installer.SwaggerUI/versions?api-version=7.0" -Headers @{Authorization = "Basic " + [Convert]::ToBase64String([Text.Encoding]::ASCII.GetBytes(":$env:SYSTEM_ACCESSTOKEN"))}).value | Sort-Object -Property publishDate -Descending | Select-Object -First 1 -ExpandProperty version
+            
+            Write-Host "Latest SwaggerUI version: $swaggerLatestVersion"
+            
+            Invoke-WebRequest -Uri "https://pkgs.dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_apis/packaging/feeds/EdFi@Release/nuget/packages/EdFi.Suite3.Installer.SwaggerUI/versions/$swaggerLatestVersion/content" -OutFile "C:/Temp/EdFi.Suite3.Installer.SwaggerUI.nupkg"
             Rename-Item -Path "C:/Temp/EdFi.Suite3.Installer.SwaggerUI.nupkg" -NewName "EdFi.Suite3.Installer.SwaggerUI.zip"
             Expand-Archive -Path "C:/Temp/EdFi.Suite3.Installer.SwaggerUI.zip" -DestinationPath "C:/Temp/EdFi.Suite3.Installer.SwaggerUI" -Force
 
