--- a/.github/workflows/installation_scripts.yml
+++ b/.github/workflows/installation_scripts.yml
@@ -168,3 +168,38 @@ jobs:
             --name "${{ github.event.inputs.web_api_vm_name }}" \
             --resource-group "${{ github.event.inputs.resource_group }}" \
             --scripts "$SCRIPT_CONTENT" 
+
+      - name: Create SandboxAdmin Installation Script
+        run: |
+          SCRIPT_CONTENT='
+          Set-Location "C:\Temp\EdFi.Suite3.Installer.SandboxAdmin"
+          
+          Write-Host "Creating ps1 file..."
+          @"
+          Import-Module .\Install-EdFiOdsSandboxAdmin.psm1
+          `$parameters = @{
+              PackageVersion = "7.2.1201"
+              WebApiVersionUrl = "https://edfi-ods/WebApi"
+              PrePopulatedKey = "${{ secrets.POPULATED_KEY }}"
+              PrePopulatedSecret = "${{ secrets.POPULATED_SECRET }}"
+          }
+          Install-EdFiOdsSandboxAdmin @parameters
+          "@ | Out-File -FilePath "sandboxadmin_installation.ps1"
+          
+          Write-Host "File created successfully"
+          Get-Content -Path "sandboxadmin_installation.ps1"
+          '
+
+          az vm run-command invoke \
+            --command-id RunPowerShellScript \
+            --name "${{ github.event.inputs.web_api_vm_name }}" \
+            --resource-group "${{ github.event.inputs.resource_group }}" \
+            --scripts "$SCRIPT_CONTENT" 
+
+      - name: Restart IIS
+        run: |
+          az vm run-command invoke \
+            --command-id RunPowerShellScript \
+            --name "${{ github.event.inputs.web_api_vm_name }}" \
+            --resource-group "${{ github.event.inputs.resource_group }}" \
+            --scripts 'Write-Host "Restarting IIS..."; iisreset /restart'
